tests/invalid/random_choices_population_not_list_int/main.py
import random

if __name__ == "__main__":
    xs: list[int] = random.choices([1.0, 2.0], weights=[0.1, 0.9])
